<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="Settings">
	<CheckBoxPreference android:key="@string/SETTING_HTTP_CLIENT_PREF"
		android:title="Use alternate HTTP Client" android:summary="Some phones require the use of a different HTTP client"
		android:defaultValue="false" />
	<CheckBoxPreference android:key="@string/SETTING_USE_BUILTIN_PLAYER"
		android:title="Use builtin video player"
		android:summary="If disabled, will prompt you what you want to open with"
		android:defaultValue="true" />
	<ListPreference android:key="@string/SETTING_VIDEO_QUALITY" android:entries="@array/videoQualityNames"
		android:entryValues="@array/videoQualityValues" android:title="Video Quality"
		android:defaultValue="sd"
		android:summary="Some devices may only support mobile quality videos, and not all videos are available in mobile format." />
</PreferenceScreen>
